# ssd1306-linux-monitor

./: .gitignore  BUILD.md  BUILD_DEB.md  CMakeLists.txt  INSTALL_DEPS.sh  README.md  build_deb.sh
debian/: changelog  control  debhelper-build-stamp  postinst  postrm  prerm  rules
debian/ssd1306-monitor/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/ssd1306-monitor/etc/systemd/system/: ssd1306-monitor.service
include/: cpu_monitor.h  i2c_interface.h  i2c_scanner.h  ip_address.h  memory_monitor.h  network_monitor.h  ssd1306.h
scripts/: apply_i2c_speed.sh  install_service.sh  uninstall_service.sh
src/: cpu_monitor.c  i2c_interface.c  i2c_scanner.c  ip_address.c  main.c  memory_monitor.c  network_monitor.c  ssd1306.c
